# inih

./: CMakeLists.txt  README  inih.pc.in  inihcpp.pc.in
examples/: CMakeLists.txt  ini_example.c  ini_xmacros.c  test.ini
include/: CMakeLists.txt  INIReader.h
lib/: CMakeLists.txt  INIReader.cpp
tests/: INIReaderTest.cpp  unittest.c
